minor changes to html form layout

--- a/address-book.html
+++ b/address-book.html
@@ -38,7 +38,7 @@
               <input type="text" class="form-control new-city">
             </div>
             <div class="form-group">
-              <label for="new-state">City:</label>
+              <label for="new-state">State:</label>
               <input type="text" class="form-control new-state">
             </div>
           </div>
@@ -49,21 +49,20 @@
         <button type="submit" class="btn btn-default">Add me!</button>
       </form>
 
-      <h2>Contacts:</h2>
-      <ul id="contacts">
 
-      </ul>
+
     </div>
     <div class="col-md-6">
       <div id="show-contact">
-        <h2></h2>
-        <p>First name:</p>
-        <p>Last name:</p>
+        <h2>Contacts:</h2>
+        <p>Name:</p>
+        <p>Phone Number:</p>
         <p>Addresses:</p>
+        <ul id="contacts">
         <ul id="addresses">
 
         </ul>
-
+        </ul>
       </div>
 
     </div>
